Incorporacion de acciones en la tablade ROL

--- a/App/templates/header/header.html
+++ b/App/templates/header/header.html
@@ -30,5 +30,7 @@
 
     <!--Bootstrap-Table-->
     <script src="{{ url_for('static', filename='lib/bootstrap-table/dist/bootstrap-table.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/bootstrap-table/dist/locale/bootstrap-table-es-ES.min.js') }}"></script>
+
 
 </head>
