--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 {% include 'header/header.html' %}
 
@@ -16,7 +16,7 @@
 
                     <div class="col-md-3">
                         <div class="card m-2" style="width: 18rem;">
-                            <img class="card-img-top" src="..." alt="Card image cap">
+                            <img class="card-img-top" src="/static/img/electronic_5486.png" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
