odificacion de eliminar desde la tabla sin acceder a la vista de eliminar, mejor para el usario

--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -10,8 +10,8 @@
             </li>
             <li>||</li>-->
             <!--ROL-->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!--<li class="nav-item dropdown">
+                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Rol ABMC
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -23,7 +23,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('listarRol') }}">Consulta(Lista)</a>
                 </div>
-            </li>
+            </li>-->
             <!--/ROL-->
             <!--USUARIO-->
             <li class="nav-item dropdown">
