--- a/App/templates/rol/bajaRol.html
+++ b/App/templates/rol/bajaRol.html
@@ -9,10 +9,10 @@
         <form action="eliminarRol" method="POST">
             <div class="form-group">
                 <label for="exampleInputEmail1">Nombre del rol</label>
-                <input type="text" class="form-control" name="nombreRol" id="nombreRol" placeholder="ingresar nombre del rol">
+                <input value="{{ data }}" type="text" class="form-control" name="nombreRol" id="nombreRol" placeholder="ingresar nombre del rol">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
