--- a/App/templates/rol/rolEliminado.html
+++ b/App/templates/rol/rolEliminado.html
@@ -9,7 +9,7 @@
     <h2>Rol No Existe!</h2>
     {% endif %}
 
-    <a href="/">volver INDEX </a>
+    <a href="/rolABMC"> volver </a>
 </body>
 
 </html>
