--- a/App/templates/rol/rolGuardado.html
+++ b/App/templates/rol/rolGuardado.html
@@ -9,7 +9,7 @@
     <h2>El rol ya existe</h2>
     {% endif %}
 
-    <a href="/">volver INDEX </a>
+    <a href="/rolABMC"> volver </a>
 </body>
 
 </html>
