se incorporo url y funcion en flask para devolver el json para la tabla, incorporacion de alert

--- a/App/templates/rol/rolABMC.html
+++ b/App/templates/rol/rolABMC.html
@@ -136,7 +136,7 @@
             $('#myModal').modal('toggle');
         });
 
-        $('.eliminar').click(function(e) {
+        $('a.eliminar').click(function(e) {
             e.preventDefault();
             var r = confirm("¿Desea eliminar el Rol?");
 
