--- a/App/templates/rol/rolModificado.html
+++ b/App/templates/rol/rolModificado.html
@@ -3,13 +3,19 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% if data == 1 %}
-    <h2>Rol Modificado!</h2>
-    {% else %}
-    <h2>Rol No Existe!</h2>
-    {% endif %}
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
 
-    <a href="/rolABMC"> volver </a>
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar.html' %} {% if data == 1 %}
+            <h2>Rol Modificado!</h2>
+            {% else %}
+            <h2>Rol No Existe!</h2>
+            {% endif %}
+
+            <a href="/rolABMC"> volver </a>
+        </div>
+    </div>
 </body>
 
 </html>
