--- a/App/templates/usuario/altaUsuario.html
+++ b/App/templates/usuario/altaUsuario.html
@@ -3,27 +3,33 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
-    <div class="container p-2">
-        <h2>Alta de usuario</h2>
-        <form action="guardarUsuario" method="POST">
-            <div class="form-group">
-                <label for="nombreUsuario">Nombre del usuario</label>
-                <input type="email" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar el nombre del usuario">
-            </div>
-            <div class="form-group">
-                <label for="contrasenia">Contraseña</label>
-                <input type="password" class="form-control" name="contrasenia" id="contrasenia" placeholder="Ingresar la contrasenia">
-            </div>
-            <div class="form-group">
-                <label for="contacto">Contacto</label>
-                <input type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto">
-            </div>
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar.html' %}
+            <div class="container p-2">
+                <h2>Alta de usuario</h2>
+                <form action="guardarUsuario" method="POST">
+                    <div class="form-group">
+                        <label for="nombreUsuario">Nombre del usuario</label>
+                        <input type="email" class="form-control" name="nombreUsuario" id="nombreUSuario" placeholder="Ingresar el nombre del usuario">
+                    </div>
+                    <div class="form-group">
+                        <label for="contrasenia">Contraseña</label>
+                        <input type="password" class="form-control" name="contrasenia" id="contrasenia" placeholder="Ingresar la contrasenia">
+                    </div>
+                    <div class="form-group">
+                        <label for="contacto">Contacto</label>
+                        <input type="text" class="form-control" name="contacto" id="contacto" placeholder="Ingresar los datos de contacto">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
 
 
+            </div>
+        </div>
     </div>
 </body>
 
