--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -15,35 +15,46 @@
                 <div class="row">
 
                     <div class="col-md-3">
-                        <div class="card m-2" style="width: 18rem;">
-                            <img class="card-img-top" src="/static/img/electronic_5486.png" alt="Card image cap">
+                        <div class="card m-2 shadow" style="width: 18rem;">
+                            <img class="card-img-top" src="/static/img/g1_demos.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Prueba estetica</h5>
+
+                            </div>
+                            <div class="card-body">
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Cras justo odio</li>
-                                <li class="list-group-item">Dapibus ac facilisis in</li>
-                                <li class="list-group-item">Vestibulum at eros</li>
-                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card m-2 shadow" style="width: 18rem;">
+
                             <div class="card-body">
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
+                                <h4>Ventas Semanales </h4>
+                                <h2 class="card-title">320</h2>
+                            </div>
+
+                            <div class="card-body">
+
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="jumbotron m-2">
-                            <h1 class="display-6">Hello, world!</h1>
-                            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-                            <hr class="my-4">
-                            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                        <div class="card m-2 shadow" style="width: 18rem;">
+
+                            <div class="card-body">
+                                <h4>Ventas Mensuales </h4>
+                                <h2 class="card-title">980</h2>
+                            </div>
+
+                            <div class="card-body">
+
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="jumbotron m-2">
-                            <h1 class="display-6">Hello, world!</h1>
+                        <div class="jumbotron m-2 shadow">
+                            <h1 class="display-6">Prueba</h1>
                             <p class="lead"></p>
                             <hr class="my-4">
                             <p></p>
