--- a/App/templates/navbars/navbar.html
+++ b/App/templates/navbars/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand mb-0 h1" href="/">App Taller 2019</a>
+    <!--<a class="navbar-brand mb-0 h1" href="/">App Taller 2019</a>-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
