--- a/App/templates/rol/rolABMC.html
+++ b/App/templates/rol/rolABMC.html
@@ -24,7 +24,7 @@
                 {%endif%}
                 <div class="row">
                     <div class="col-lg-12 p-2">
-                        <div class="jumbotron p-3">
+                        <div class="jumbotron p-3 shadow">
                             <!--<div class="row">
                                 <div class="col-md-2">
                                     <h1 class="display-4">Rol</h1>
