--- a/App/templates/usuario/modificarUsuario.html
+++ b/App/templates/usuario/modificarUsuario.html
@@ -3,31 +3,51 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
-    <div class="container p-2">
-        <h2>Modificar Usuario</h2>
-        <form action="editarUsuario" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre del usuario a modificar</label>
-                <input type="email" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
-            </div>
-            <div class="form-group">
-                <label for="nombreNuevo">Nuevo nombre del usuario</label>
-                <input type="email" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del usuario">
-            </div>
-            <div class="form-group">
-                <label for="contraseniaNueva">Nueva contraseña del usuario</label>
-                <input type="text" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenia del usuario">
-            </div>
-            <div class="form-group">
-                <label for="contactoNuevo">Nuevo contacto del usuario</label>
-                <input type="text" class="form-control" name="contactoNuevo" id="contactoNuevo" placeholder="Ingresar el nuevo contacto del usuario">
-            </div>
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
+
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar.html' %}
+            <div class="container p-2">
+                <h2>Modificar Usuario</h2>
+                <form action="{{ url_for('editarUsuario') }}" method="POST">
+                    <div class="form-group">
+                        <label for="nombre">Nombre del usuario a modificar</label>
+                        <input readonly value="{{data['email']}}" type="email" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del usuario">
+                    </div>
+                    <!--<div class="form-group">
+                        <label for="nombreNuevo">Nuevo nombre del usuario</label>
+                        <input type="email" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del usuario">
+                    </div>-->
+                    <div class="form-group">
+                        <label for="contraseniaNueva">Nueva contraseña del usuario</label>
+                        <input type="password" class="form-control" name="contraseniaNueva" id="contraseniaNueva" placeholder="Ingresar la nueva contrasenia del usuario">
+                    </div>
+                    <div class="form-group">
+                        <label for="contactoNuevo">Contacto del usuario</label>
+                        <input type="text" value="{{data['Contacto']}}" class="form-control" name="contactoNuevo" id="contactoNuevo">
+
+                    </div>
+                    <div class="form-group">
+                        <label for="contactoNuevo">Rol</label>
+                        <select name="NuevoRol" class="custom-select">
+                            {% for e in data['roles'] %}
+                                {% if data['rolUsario'] == e[0] %}
+                                    <option selected value="{{e[0]}}">{{e[1]}}</option>
+                                {% else %}    
+                                    <option value="{{e[0]}}">{{e[1]}}</option>
+                                {% endif %}
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
 
 
+            </div>
+        </div>
     </div>
 </body>
 
