--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -63,8 +63,11 @@
                     </div>
                 </div>
             </div>
+
         </div>
+
     </div>
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
