--- a/App/templates/rol/altaRol.html
+++ b/App/templates/rol/altaRol.html
@@ -8,19 +8,21 @@
 
         <div id="page-content-wrapper">
             {% include 'navbars/navbar.html' %}
-            <div class="container p-2">
-                <h2>Alta Rol</h2>
-                <form action="guardarRol" method="POST">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Nombre del rol</label>
-                        <input type="text" class="form-control" name="nombreRol" id="nombreRol" placeholder="ingresar nombre del rol">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Aceptar</button>
-                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
-                </form>
+            <div class="container-fluid p-2">
+                <div class="jumbotron p-3 shadow">
+                    <h2>Alta Rol</h2>
+                    <form action="guardarRol" method="POST">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Nombre del rol</label>
+                            <input type="text" class="form-control" name="nombreRol" id="nombreRol" placeholder="ingresar nombre del rol">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Aceptar</button>
+                        <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                    </form>
 
-
+                </div>
             </div>
+            {% include 'footer/footer.html' %}
         </div>
     </div>
 </body>
