--- a/App/templates/rol/rolABMC.html
+++ b/App/templates/rol/rolABMC.html
@@ -33,17 +33,17 @@
                                     <a class="btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
                                 </div>
                             </div>-->
-                            <h1 class="display-5">Rol</h1>
+                            <h3 class="display-6">Rol</h3>
                             <hr class="my-4">
                             <a class="btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
-
-                            <table id="tablaRol" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
+                            <table id="tablaRol" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="400">
                             </table>
                         </div>
                     </div>
                 </div>
             </div>
+            {% include 'footer/footer.html' %}
         </div>
     </div>
 
@@ -93,7 +93,7 @@
                 var urlModificar = "{{ url_for('modificarRol') }}"; //jinja Template
                 var urlEliminar = '{{ url_for("eliminarRol") }}'; //jinja Template
 
-                console.log(row);
+
 
                 var html = '';
                 //html += '<a id="verRol' + row.id + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
