--- a/App/templates/usuario/usuarioABMC.html
+++ b/App/templates/usuario/usuarioABMC.html
@@ -44,6 +44,7 @@
                     </div>
                 </div>
             </div>
+            {% include 'footer/footer.html' %}
         </div>
     </div>
 
@@ -100,7 +101,7 @@
                     var urlModificar = "{{ url_for('modificarUsuario') }}"; //jinja Template
                     var urlEliminar = '{{ url_for("eliminarUsuario") }}'; //jinja Template
 
-                    console.log(row);
+
 
                     var html = '';
                     //html += '<a id="verRol' + row.nombre + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
