--- a/App/templates/rol/altaRol.html
+++ b/App/templates/rol/altaRol.html
@@ -9,7 +9,7 @@
         <div id="page-content-wrapper">
             {% include 'navbars/navbar.html' %}
             <div class="container-fluid p-2">
-                <div class="jumbotron p-3 shadow">
+                <div class="card p-3 shadow">
                     <h2>Alta Rol</h2>
                     <form action="guardarRol" method="POST">
                         <div class="form-group">
