--- a/App/templates/usuario/usuarioABMC.html
+++ b/App/templates/usuario/usuarioABMC.html
@@ -24,23 +24,13 @@
                 {%endif%}
                 <div class="row">
                     <div class="col-lg-12 p-2">
-                        <div class="jumbotron p-3 shadow">
-                            <!--<div class="row">
-                                <div class="col-md-2">
-                                    <h1 class="display-4">Rol</h1>
-                                </div>
-                                <div class="col-md-10">
-                                    <a class="btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
-                                </div>
-                            </div>-->
-                            <h1 class="display-5">Usuario</h1>
-                            <hr class="my-4">
-                            <a class="btn btn-success" href="{{ url_for('altaUsuario') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
+                        <h1 class="display-5">Usuario</h1>
+                        <hr class="my-4">
+                        <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaUsuario') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
-                            <table id="tablaRol" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
-                            </table>
-                        </div>
+                        <table id="tablaRol" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
+                        </table>
                     </div>
                 </div>
             </div>
