--- a/App/templates/rol/rolABMC.html
+++ b/App/templates/rol/rolABMC.html
@@ -23,9 +23,9 @@
                 </div>
                 {%endif%}
                 <div class="row">
-                    <div class="col-lg-12 p-2">
-                        <div class="jumbotron p-3 shadow">
-                            <!--<div class="row">
+                    <div class="col-12 p-2">
+                        <!--<div class="card p-3 shadow">-->
+                        <!--<div class="row">
                                 <div class="col-md-2">
                                     <h1 class="display-4">Rol</h1>
                                 </div>
@@ -33,14 +33,14 @@
                                     <a class="btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
                                 </div>
                             </div>-->
-                            <h3 class="display-6">Rol</h3>
-                            <hr class="my-4">
-                            <a class="btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
+                        <h3 class="display-6">Rol</h3>
+                        <hr class="my-4">
+                        <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
-                            <table id="tablaRol" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="400">
-                            </table>
-                        </div>
+                        <table id="tablaRol" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="400">
+                        </table>
                     </div>
+                    <!--</div>-->
                 </div>
             </div>
             {% include 'footer/footer.html' %}
