--- a/App/templates/navbars/sidebar.html
+++ b/App/templates/navbars/sidebar.html
@@ -1,12 +1,11 @@
 <!-- Sidebar -->
 <div class="bg-light border-right" id="sidebar-wrapper">
     <!--<div class="sidebar-heading">Start Bootstrap </div>-->
-    <a class="navbar-brand mb-0 h1 p-2" href="/">App Taller 2019</a>
+    <a class="navbar-brand mb-0 h1 p-2" href="/"> <i class="fas fa-keyboard"></i> App Taller 2019</a>
     <div class="list-group list-group-flush">
-        <a href="{{ url_for('rolABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-users"></i> <strong>Rol</strong> <i class="fas fa-angle-right"></i> </a>
-        <a href="{{ url_for('usuarioABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> <strong>Usuario </strong><i class="fas fa-angle-right"></i> </a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">----</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">---</a>
+        <a href="{{ url_for('rolABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-users"></i> Rol <i class="fas fa-angle-right"></i> </a>
+        <a href="{{ url_for('usuarioABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-user"></i> Usuario <i class="fas fa-angle-right"></i> </a>
+        <a href="{{ url_for('tipoProductoABMC') }}" class="list-group-item list-group-item-action bg-light"><i class="fas fa-laptop"></i> Tipo de Productos <i class="fas fa-angle-right"></i> [En progreso...]</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">---</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">----</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">----</a>
