--- a/App/templates/tipoProducto/modificarTipoProducto.html
+++ b/App/templates/tipoProducto/modificarTipoProducto.html
@@ -6,17 +6,17 @@
     {% include 'navbars/navbar.html' %}
     <div class="container p-2">
         <h2>Modificar tipo de producto</h2>
-        <form action="editarTipoProducto" method="POST">
+        <form action="{{ url_for('editarTipoProducto') }}" method="POST">
             <div class="form-group">
-                <label for="nombre">Nombre del tipo de producto a modificar</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre del tipo de producto">
+                <label for="nombre">Nombre Actual del tipo de producto a modificar</label>
+                <input readonly type="text" class="form-control" name="nombre" id="nombre" value="{{ data[1] }}">
             </div>
             <div class="form-group">
                 <label for="nombreNuevo">Nuevo nombre del tipo de producto</label>
                 <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar el nuevo nombre del tipo de producto">
             </div>
             <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
+            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
 
 
