--- a/App/templates/tipoProducto/tipoProductoABMC.html
+++ b/App/templates/tipoProducto/tipoProductoABMC.html
@@ -21,7 +21,52 @@
                         </div>
                     </div>
                 </div>
+                {%endif%} {% if data == "alta" %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>Tipo de Producto Dado de Alta!</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                {%endif%} {% if data == "ya_existe" %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="m-2 alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>Tipo de Producto Ya Existe!</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                {%endif%} {% if data == "modificado" %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>Tipo de Producto Modificado!</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                {%endif%} {% if data == "no_modificado" %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="m-2 alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>Tipo de Producto No Modificado!</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                    </div>
+                </div>
                 {%endif%}
+
                 <div class="row">
                     <div class="col-lg-12 p-2">
 
@@ -90,8 +135,8 @@
 
                     var html = '';
                     //html += '<a id="verRol' + row.nombre + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
-                    html += '<a class="btn btn-primary m-2" href=' + urlModificar + '/' + row.nombre + '><i class="fas fa-edit"></i></a>';
-                    html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.nombre + '><i class="fas fa-trash"></i></a>';
+                    html += '<a class="btn btn-primary m-2" href=' + urlModificar + '/' + row.id + '><i class="fas fa-edit"></i></a>';
+                    html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.id + '><i class="fas fa-trash"></i></a>';
 
 
                     return html;
