--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -14,19 +14,8 @@
                 <!--<h2>{{ data }}</h2>-->
                 <div class="row">
 
-                    <div class="col-md-3">
-                        <div class="card m-2 shadow" style="width: 18rem;">
-                            <img class="card-img-top" src="/static/img/g1_demos.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Prueba estetica</h5>
 
-                            </div>
-                            <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="card m-2 shadow" style="width: 18rem;">
 
                             <div class="card-body">
@@ -39,7 +28,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="card m-2 shadow" style="width: 18rem;">
 
                             <div class="card-body">
@@ -52,13 +41,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="jumbotron m-2 shadow">
-                            <h1 class="display-6">Prueba</h1>
-                            <p class="lead"></p>
-                            <hr class="my-4">
-                            <p></p>
-                            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card m-2 shadow" style="width: 18rem;">
+                        <img class="card-img-top" src="/static/img/g1_demos.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Prueba estetica</h5>
+
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                     </div>
                 </div>
