--- a/App/templates/marca/marcaABMC.html
+++ b/App/templates/marca/marcaABMC.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
-                            <strong>Rol Eliminado!</strong>
+                            <strong>Marca Eliminada!</strong>
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
@@ -25,7 +25,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
-                            <strong>Rol Dado de Alta!</strong>
+                            <strong>Marca Dada de Alta!</strong>
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
@@ -36,7 +36,29 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="m-2 alert alert-danger alert-dismissible fade show" role="alert">
-                            <strong>El Rol Ya Existe!</strong>
+                            <strong>La Marca Ya Existe!</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                {%endif%} {% if data == "modificado" %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>Marca Modificada!</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                {%endif%} {% if data == "no_modificado" %}
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="m-2 alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>Marca No Modificada!</strong>
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
@@ -44,25 +66,17 @@
                     </div>
                 </div>
                 {%endif%}
-                <div class="row">
-                    <div class="col-12 p-2">
-                        <!--<div class="card p-3 shadow">-->
-                        <!--<div class="row">
-                                <div class="col-md-2">
-                                    <h1 class="display-4">Rol</h1>
-                                </div>
-                                <div class="col-md-10">
-                                    <a class="btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
-                                </div>
-                            </div>-->
-                        <h1 class="display-5">Rol</h1>
-                        <hr class="my-4">
-                        <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
-                        <table id="tablaRol" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
+                <div class="row">
+                    <div class="col-lg-12 p-2">
+
+                        <h1 class="display-5">Marca</h1>
+                        <hr class="my-4">
+                        <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaMarca') }}"><i class="far fa-plus-square"></i> Nuevo</a>
+
+                        <table id="tablaMarca" data-classes="table table-bordered table-hover  table-striped" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
                         </table>
                     </div>
-                    <!--</div>-->
                 </div>
             </div>
             {% include 'footer/footer.html' %}
@@ -95,40 +109,43 @@
 <script>
     $('document').ready(function() {
         var columns = [{
-            field: "id",
-            title: "ID",
-            sortable: true,
-            width: "20"
-        }, {
-            field: "rol",
-            title: "Rol",
-            sortable: true,
-            width: "30"
-        }, {
-            field: 'operate',
-            title: 'Acciones',
-            width: "50",
-            // align: 'center',
-            //valign: 'middle',
-            clickToSelect: false,
-            formatter: function(value, row, index) {
-                var urlModificar = "{{ url_for('modificarRol') }}"; //jinja Template
-                var urlEliminar = '{{ url_for("eliminarRol") }}'; //jinja Template
+                field: "id",
+                title: "ID",
+                sortable: true,
+                width: "20"
+            }, {
+                field: "marca",
+                title: "Marca",
+                sortable: true,
+                width: "30"
+            },
+
+            {
+                field: 'operate',
+                title: 'Acciones',
+                width: "50",
+                // align: 'center',
+                //valign: 'middle',
+                clickToSelect: false,
+                formatter: function(value, row, index) {
+                    var urlModificar = "{{ url_for('modificarMarca') }}"; //jinja Template
+                    var urlEliminar = '{{ url_for("eliminarMarca") }}'; //jinja Template
 
 
 
-                var html = '';
-                //html += '<a id="verRol' + row.id + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
-                html += '<a class="btn btn-primary m-2" href=' + urlModificar + '/' + row.id + '><i class="fas fa-edit"></i></a>';
-                html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.id + '><i class="fas fa-trash"></i></a>';
+                    var html = '';
+                    //html += '<a id="verRol' + row.nombre + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
+                    html += '<a class="btn btn-primary m-2" href=' + urlModificar + '/' + row.id + '><i class="fas fa-edit"></i></a>';
+                    html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.id + '><i class="fas fa-trash"></i></a>';
 
 
-                return html;
+                    return html;
+                }
             }
-        }]
+        ]
 
-        $('#tablaRol').bootstrapTable({
-            url: "{{ url_for('rol_data_table') }}", //Obrtine los datos desde el backend, formato json 
+        $('#tablaMarca').bootstrapTable({
+            url: "{{ url_for('marca_data_table') }}", //Obrtine los datos desde el backend, formato json 
             columns: columns,
             locale: "es-ES",
             showRefresh: false,
