Combo: se agrega funcionalidad que va acumulaando el la suma de los productos

--- a/App/templates/combo/cargarEjemplaresAlCombo.html
+++ b/App/templates/combo/cargarEjemplaresAlCombo.html
@@ -21,6 +21,10 @@
                         <input readonly value="{{data['idCombo']}}" type="text" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
                     </div>
                     <div class="form-group">
+                        <label for="total">Precio total</label>
+                        <input readonly value="{{data['total']}}" type="text" class="form-control" name="total" id="total" placeholder="Total">
+                    </div>
+                    <div class="form-group">
                         <label for="idProducto">Id del producto</label>
                         <input readonly value="{{data['producto']}}" type="text" class="form-control" name="idProducto" id="idProducto" placeholder="Id del producto">
                     </div>
