--- a/App/templates/combo/cargarProductosAlCombo.html
+++ b/App/templates/combo/cargarProductosAlCombo.html
@@ -21,6 +21,10 @@
                         <input readonly value="{{id}}" type="text" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
                     </div>
                     <div class="form-group">
+                        <label for="total">Precio total</label>
+                        <input readonly value="{{dato['total']}}" type="text" class="form-control" name="total" id="total" placeholder="Total">
+                    </div>
+                    <div class="form-group">
                         <label for="nuevoProducto">Agregar producto</label>
                         <select name="producto" class="custom-select">
                             {% for e in dato['productos'] %}   
