--- a/App/templates/combo/cargarProductosAlCombo.html
+++ b/App/templates/combo/cargarProductosAlCombo.html
@@ -3,28 +3,33 @@
 {% include 'header/header.html' %}
 
 <body>
-
     <div class="d-flex" id="wrapper">
         {% include 'navbars/sidebar.html' %}
-
-        <div id="page-content-wrapper">
-            {% include 'navbars/navbar.html' %}
             <div class="container p-2">
-                <h2>Cargar productos al combo</h2>
+                <center>
+                    <h2>{{dato['nombreCombo']}}</h2>
                 <form action="cargarProductos" method="POST">
                     <div class="form-group">
-                        <label for="nombreCombo">Nombre del combo</label>
-                        <input readonly value="{{dato['nombreCombo']}}" type="text" class="form-control" name="nombreCombo" id="nombreCombo" placeholder="Nombre del combo">
+                        <input readonly value="{{dato['nombreCombo']}}" type="hidden" class="form-control" name="nombreCombo" id="nombreCombo" placeholder="Nombre del combo">
                     </div>
                     <div class="form-group">
-                        <label for="idCombo">Id del combo</label>
-                        <input readonly value="{{id}}" type="text" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
+                        <label for="idCombo">Id del combo: {{id}}</label>
+                        <input readonly value="{{id}}" type="hidden" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
                     </div>
                     <div class="form-group">
-                        <label for="total">Precio total</label>
-                        <input readonly value="{{dato['total']}}" type="text" class="form-control" name="total" id="total" placeholder="Total">
+                        <label for="total">Precio total: {{dato['total']}}</label>
+                        <input readonly value="{{dato['total']}}" type="hidden" class="form-control" name="total" id="total" placeholder="Total">
                     </div>
-                    <div class="form-group">
+                </center>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 p-2">
+                            <table id="tablaProductosCombo" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
                         <label for="nuevoProducto">Agregar producto</label>
                         <select name="producto" class="custom-select">
                             {% for e in dato['productos'] %}   
@@ -36,10 +41,79 @@
                     <a class="btn btn-danger" href="/" role="button">Cancelar</a>
                 </form>
             </div>
-            {% include 'footer/footer.html' %}
         </div>
-    </div>
-
+    </div> 
 </body>
 
+
+<script>
+    $('document').ready(function() {
+        var columns = [{
+            field: "numeroSerie",
+            title: "Numero de serie",
+            sortable: true,
+            width: "20"
+        }, {
+            field: "nombre",
+            title: "Nombre",
+            sortable: true,
+            width: "30"
+        }, {
+            field: "total",
+            title: "Total",
+            sortable: true,
+            width: "20"
+        },{
+            field: 'operate',
+            title: 'Acciones',
+            width: "50",
+            // align: 'center',
+            //valign: 'middle',
+            clickToSelect: false,
+            formatter: function(value, row, index) {
+                var urlModificar = "{{ url_for('modificarCombo') }}"; //jinja Template
+                var urlEliminar = '{{ url_for("eliminarCombo") }}'; //jinja Template
+
+
+
+                var html = '';
+                //html += '<a id="verRol' + row.id + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
+                //html += '<a class="btn btn-primary m-2" href=' + urlVer + '/' + row.id + '><i class="fas fa-eye"></i></a>';
+                html += '<a class="btn btn-primary m-2" href=' + urlModificar + '/' + row.id + '><i class="fas fa-edit"></i></a>';
+                html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.id + '><i class="fas fa-trash"></i></a>';
+
+
+                return html;
+            }
+        }]
+
+        $('#tablaProductosCombo').bootstrapTable({
+            url: "{{ url_for('productos_combo_data_table') }}", //Obtiene los datos desde el backend, formato json 
+            columns: columns,
+            locale: "es-ES",
+            showRefresh: false,
+        });
+
+
+        $('#verRol1').click(function(e) {
+            $('#myModal').modal('toggle');
+        });
+
+        $('.eliminar').click(function(e) {
+            alert()
+            var r = confirm("¿Desea eliminar el Rol?");
+
+            if (r == true) {
+                location.href('/eliminarRol/' + id)
+            } else {
+                e.preventDefault();
+            }
+        });
+
+
+
+    });
+</script>
+
+    
 </html>
