--- a/App/templates/combo/cargarProductosAlCombo.html
+++ b/App/templates/combo/cargarProductosAlCombo.html
@@ -8,20 +8,97 @@
             <div class="container p-2">
                 <center>
                     <h2>{{dato['nombreCombo']}}</h2>
-                <form action="cargarProductos" method="POST">
                     <div class="form-group">
                         <input readonly value="{{dato['nombreCombo']}}" type="hidden" class="form-control" name="nombreCombo" id="nombreCombo" placeholder="Nombre del combo">
                     </div>
-                    <div class="form-group">
-                        <label for="idCombo">Id del combo: {{id}}</label>
-                        <input readonly value="{{id}}" type="hidden" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <form action="cargarProductos" method="POST">
+                                <div class="form-group">
+                                    <input value="{{dato['nombreCombo']}}" type="hidden" class="form-control" name="nombreCombo" id="nombreCombo" placeholder="Nombre del combo">
+                                </div>
+                                <div class="form-group">
+                                    <input value="{{id}}" type="hidden" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
+                                </div>
+                                <div class="form-group">
+                                    <input value="{{dato['total']}}" type="hidden" class="form-control" name="total" id="total" placeholder="Total">
+                                </div>
+                                <div class="form-group">
+                                    <input value="{{dato['descuento']}}" type="hidden" class="form-control" name="descuento" id="descuento" placeholder="Descuento">
+                                </div>
+                                <div class="form-group">
+                                    <input value="{{dato['totalConDescuento']}}" type="hidden" class="form-control" name="totalConDescuento" id="dtotalConDescuento" placeholder="Total con Descuento">
+                                </div>
+                                    <div class="form-group">
+                                        <label for="nuevoProducto">Agregar producto</label>
+                                        <select name="producto" class="custom-select">
+                                            {% for e in dato['productos'] %}   
+                                                <option value="{{e[0]}}">{{e[1]}}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                        <button type="submit" class="btn btn-primary">Agregar</button>
+                                        <!-- <a class="btn btn-danger" href="/" role="button">Volver</a> -->
+                            </form>
+                        </div>
+
+                        <div class="col-md-6">
+                            <form action="cargarDescuentoAlCombo" method="POST">
+                                <div class="form-group">
+                                    <input value="{{dato['nombreCombo']}}" type="hidden" class="form-control" name="nombreCombo" id="nombreCombo" placeholder="Nombre del combo">
+                                </div>
+                                <div class="form-group">
+                                    <input value="{{id}}" type="hidden" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
+                                </div>
+                                <div class="form-group">
+                                    <input value="{{dato['total']}}" type="hidden" class="form-control" name="total" id="total" placeholder="Total">
+                                </div>
+                                <div class="form-group">
+                                    <label for="descuento">Porcentaje de descuento</label>
+                                    <input type="number" class="form-control" name="descuento" id="descuento" placeholder="Ingresar el porcentaje del descuento">
+                                </div>
+                                <div class="form-group">
+                                    <input value="{{dato['totalConDescuento']}}" type="hidden" class="form-control" name="totalConDescuento" id="dtotalConDescuento" placeholder="Total con Descuento">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Descontar</button>
+                            </form>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="total">Precio total: {{dato['total']}}</label>
-                        <input readonly value="{{dato['total']}}" type="hidden" class="form-control" name="total" id="total" placeholder="Total">
-                    </div>
-                </center>
+
+
+                <div>
+                        <h4>Detalle del combo</h4>
+                        <div class="form-group">
+                            <label for="idCombo">Id del combo: {{id}}</label>
+                            <input readonly value="{{id}}" type="hidden" class="form-control" name="idCombo" id="idCombo" placeholder="Id del combo">
+                        </div>
+                        <div class="form-group">
+                            <label for="total">Precio total: ${{dato['total']}}</label>
+                            <input readonly value="{{dato['total']}}" type="hidden" class="form-control" name="total" id="total" placeholder="Total">
+                        </div>
+                        <div class="form-group">
+                            <label for="total">Porcentaje de descuento aplicado: {{dato['descuento']}}%</label>
+                            <input readonly value="{{dato['descuento']}}" type="hidden" class="form-control" name="descuento" id="descuento" placeholder="Descuento">
+                        </div>
+                        <div class="form-group">
+                            <label for="total">Total con descuento: ${{dato['totalConDescuento']}}</label>
+                            <input readonly value="{{dato['totalConDescuento']}}" type="hidden" class="form-control" name="totalConDescuento" id="totalConDescuento" placeholder="Total con Descuento">
+                        </div>
+                </div>
+                
                 <div class="container-fluid">
+                    {% if marcador == "eliminado" %}
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="m-2 alert alert-success alert-dismissible fade show" role="alert">
+                                    <strong>Ejemplar eliminado!</strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                        </div>
+                    </div>
+                    {%endif%}
                     <div class="row">
                         <div class="col-12 p-2">
                             <table id="tablaProductosCombo" data-classes="table table-bordered table-hover table-striped shadow" data-thead-classes="thead-dark" data-toggle="false" data-toolbar="#toolbar" data-search="true" data-show-columns="false" data-pagination="true" data-height="500">
@@ -29,19 +106,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                        <label for="nuevoProducto">Agregar producto</label>
-                        <select name="producto" class="custom-select">
-                            {% for e in dato['productos'] %}   
-                                <option value="{{e[0]}}">{{e[1]}}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Aceptar</button>
-                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
-                </form>
+                </center>
             </div>
-        </div>
     </div> 
 </body>
 
@@ -52,38 +118,31 @@
             field: "numeroSerie",
             title: "Numero de serie",
             sortable: true,
-            width: "20"
+            width: "10"
         }, {
             field: "nombre",
             title: "Nombre",
             sortable: true,
-            width: "30"
+            width: "10"
         }, {
             field: "precio",
             title: "Precio",
             sortable: true,
-            width: "20"
+            width: "10"
         },{
             field: 'operate',
             title: 'Acciones',
-            width: "50",
+            width: "10",
             // align: 'center',
             //valign: 'middle',
             clickToSelect: false,
             formatter: function(value, row, index) {
-                var urlModificar = "{{ url_for('modificarCombo') }}"; //jinja Template
-                var urlEliminar = '{{ url_for("eliminarCombo") }}'; //jinja Template
-
-
-
+                /* var idCombo="{{id}}";
                 var html = '';
-                //html += '<a id="verRol' + row.id + '" class="btn btn-info m-2"><i class="fas fa-eye"></i></a>';
-                //html += '<a class="btn btn-primary m-2" href=' + urlVer + '/' + row.id + '><i class="fas fa-eye"></i></a>';
-                html += '<a class="btn btn-primary m-2" href=' + urlModificar + '/' + row.id + '><i class="fas fa-edit"></i></a>';
-                html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.id + '><i class="fas fa-trash"></i></a>';
-
-
-                return html;
+                println(urlEliminar);
+                println(html);
+                html += '<a class="eliminar btn btn-danger m-2" href=' + urlEliminar + '/' + row.numeroSerie + '/' + idCombo + '><i class="fas fa-trash"></i></a>';
+                return html; */
             }
         }]
 
@@ -103,19 +162,14 @@
 
         $('.eliminar').click(function(e) {
             alert()
-            var r = confirm("¿Desea eliminar el Rol?");
+            var r = confirm("¿Desea quitar este producto del combo?");
 
             if (r == true) {
-                location.href('/eliminarRol/' + id)
+                location.href('/eliminarEjemplar_combo/' + numeroSerie +'/' + idCombo)
             } else {
                 e.preventDefault();
             }
         });
-
-
-
     });
-</script>
-
-    
+</script>  
 </html>
