--- a/App/templates/combo/comboABMC.html
+++ b/App/templates/combo/comboABMC.html
@@ -55,7 +55,7 @@
                                     <a class="btn btn-success" href="{{ url_for('altaRol') }}"><i class="far fa-plus-square"></i> Nuevo</a>
                                 </div>
                             </div>-->
-                        <h1 class="display-5">Combo</h1>
+                        <h1 class="display-5">Combos</h1>
                         <hr class="my-4">
                         <a class="nuevo-abmc btn btn-success" href="{{ url_for('altaCombo') }}"><i class="far fa-plus-square"></i> Nuevo</a>
 
@@ -98,26 +98,31 @@
             field: "id",
             title: "ID",
             sortable: true,
-            width: "20"
+            width: "10"
         }, {
             field: "nombre",
             title: "Nombre",
             sortable: true,
-            width: "30"
+            width: "50"
         }, {
             field: "total",
             title: "Total",
             sortable: true,
-            width: "20"
+            width: "10"
         },{
             field: "descuento",
             title: "Descuento",
             sortable: true,
-            width: "20"
+            width: "10"
+        },{
+            field: "totalConDescuento",
+            title: "Total con descuento",
+            sortable: true,
+            width: "10"
         },{
             field: 'operate',
             title: 'Acciones',
-            width: "50",
+            width: "10",
             // align: 'center',
             //valign: 'middle',
             clickToSelect: false,
